--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sample Project</title>
     <link rel="stylesheet" href="index.css">
-
 </head>
-<body>
+    <body>
         <header class="container">
             <section class="column1">
-                <img class="image" src="/image/pic.jpg" alt="">
+                <img class="image" src="./image/pic.jpg" alt="">
                     <table class="table">
                         <tr>
                             <th>Age:</th>
@@ -34,7 +33,7 @@
             <section class="column2">
                 <div class="about">
                     <h2>About Me</h2>
-                    <p>She is often referred to as the first superstar <br>computer games Developer.He broke the<br> monotony in the video game industry by<br> producing a creative adventurous sandbox<br> video game, allowing players to create, craft<br> and mine. His passion for developing and <br>producing a virtual lego game, with endless <br>building possibilities, kept him engaged with<br> programming to great extent.
+                    <p>She is often referred to as the first superstar computer games Developer.He broke the monotony in the video game industry by producing a creative adventurous sandbox video game, allowing players to create, craft and mine. His passion for developing and producing a virtual lego game, with endless building possibilities, kept him engaged with programming to great extent.
                     </p> 
                 </div> 
               
@@ -42,11 +41,11 @@
             <section class="column3">
                 <div class="goals">
                     <h2>Goals</h2>
-                    <p>I always love to collect minimal and modern <br>furniture for my home and specially for my <br>workplace. Due to covid situation as I need <br>to work from home so now a days it's <br>mandatory forme to think more creatively <br>within my work place. so, minimal colored <br>furniture will help me a lot in this case.</p>
+                    <p>I always love to collect minimal and modern furniture for my home and specially for my workplace. Due to covid situation as I need to work from home so now a days it's mandatory forme to think more creatively within my work place. so, minimal colored furniture will help me a lot in this case.</p>
                 </div>
                 <div class="needs">
                     <h2>Needs</h2>
-                    <p>Current app UI is messy. I think need to <br> improve the app user interface. So that all<br>information can be found oranized and easy <br> to navigate .Also need to show the order<br>process in a modern way.</p>
+                    <p>Current app UI is messy. I think need to improve the app user interface. So that all information can be found oranized and easy  to navigate .Also need to show the order process in a modern way.</p>
                 </div>
                 <div class="point">
                     <h2>Pain Point</h2>
@@ -65,52 +64,49 @@
                     <div class="slider">
                        
                         <span>Introvert Extrovert</span>
-                        <img class="image2" src="/image/slider.png" alt="">
+                        <img class="image2" src="./image/slider.png" alt="">
                         <div>
                             <span>Analytical creative</span>
                         </div>
-                        <img class="image2" src="/image/slider.png" alt="">
+                        <img class="image2" src="./image/slider.png" alt="">
                     </div>
                     <div class="slider1">
                         <div>
                             <span>Busy </span>
                             <span class="span1">Time Rich</span>
                         </div>
-                        <img class="image2" src="/image/slider.png" alt="">
+                        <img class="image2" src="./image/slider.png" alt="">
                         <div>
                             <span>messy organized</span>
                         </div>
-                        <img class="image2" src="/image/slider.png" alt="">
+                        <img class="image2" src="./image/slider.png" alt="">
                     </div>
                     <div class="slider2">
                         <div>
                             <span>Independent </span>
                             <span class="span3">Team Player</span>
                         </div>
-                        <img class="image2" src="/image/slider.png" alt="">
+                        <img class="image2" src="./image/slider.png" alt="">
                         <div>
                             <span class="span2">Passive Active</span>
                         </div>
-                        <img class="image2" src="/image/slider.png" alt="">
+                        <img class="image2" src="./image/slider.png" alt="">
                     </div>
                 </div>
                 <div class="image4">
-                    <img src="/image/chair.png" alt="">
+                    <img src="./image/chair.png" alt="">
                 </div> 
             </footer>
             <div class="about1">
                 <div class="image1">
-                    <img src="/image/straight-quotes.png" alt="">
+                    <img src="./image/straight-quotes.png" alt="">
                 </div>
                 <div class="info">
-                    <p>Problems will come up. Your willpower will run out. Like <br> mana or stamina, willpower is a
-                        finite resource. when your<br> own willpower runs out, you're in trouble. Your iron will<br>
-                        begin to crack. You've without a doubt a felt this before.<br> Maybe you've noticed it's easier
-                        to avoid bad habits in the<br> morning. By the time you finish school, or eork, or<br> whatever
-                        else you have going on during the day, junk food<br> is a lot harder to resist.
+                    <p>Problems will come up. Your willpower will run out. Like mana   or stamina, willpower is a finite resource. when your own willpower runs out, you're in trouble. Your iron will
+                    begin to crack. You've without a doubt a felt this before.Maybe you've noticed it's easier to avoid bad habits in the morning. By the time you finish school, or eork, or whatever else you have going on during the day, junk food is a lot harder to resist.
                     </p>
                 </div>
             </div>
         </header>
-</body>
+    </body>
 </html>
