new updated file

--- a/index.html
+++ b/index.html
@@ -54,43 +54,85 @@
                         <li>I can't track my order properly.</li>
                         <li>There is no option to make a report for the product issue.</li>
                         <li>I can't find the return option from the app user interface.</li>
-                        <li>Current app interface is really hard to navigate and browser as all informations are not organized here.</li>
+                        <li>Current app interface is really hard to navigate and      browser as all informations are not organized here.</li>
                     </ul>
                 </div>
             </section>
             <footer>
                 <div class="personality">
                     <h2>Personality</h2>
+                    <div class="maindiv">
                     <div class="slider">
-                       
-                        <span>Introvert Extrovert</span>
-                        <img class="image2" src="./image/slider.png" alt="">
-                        <div>
-                            <span>Analytical creative</span>
+                        <div class="first">
+                            <div>
+                                Introvert
+                            </div>
+                            <div class="intro">
+                                Extrovert
+                            </div>
+                            <div>
+                            <img src="./image/slider.png" alt="">
+                            </div>
                         </div>
-                        <img class="image2" src="./image/slider.png" alt="">
+                        <div class="first"> 
+                            <div>
+                                Analytical
+                            </div>
+                            <div class="intro">
+                                creative
+                            </div>
+                            <div>
+                            <img src="./image/slider.png" alt="">
+                            </div>
+                        </div>
                     </div>
-                    <div class="slider1">
-                        <div>
-                            <span>Busy </span>
-                            <span class="span1">Time Rich</span>
+                   <div class="slider">
+                        <div class="first2">
+                            <div>
+                                Busy 
+                            </div>
+                            <div class="intro">
+                                Time Rich
+                            </div>
+                            <div>
+                                <img src="./image/slider.png" alt="">
+                            </div>
                         </div>
-                        <img class="image2" src="./image/slider.png" alt="">
-                        <div>
-                            <span>messy organized</span>
+                        <div class="first2">
+                            <div>
+                                messy organized
+                            </div>
+                            <div class="intro">
+                                organized
+                            </div>
+                            <div>
+                                <img src="./image/slider.png" alt="">
+                            </div>
                         </div>
-                        <img class="image2" src="./image/slider.png" alt="">
                     </div>
-                    <div class="slider2">
-                        <div>
-                            <span>Independent </span>
-                            <span class="span3">Team Player</span>
+                    <div class="slider">
+                        <div class="first">
+                            <div>
+                                Independent 
+                            </div>
+                            <div class="intro">
+                                Team Player
+                            </div>
+                            <div>
+                                <img src="./image/slider.png" alt="">
+                            </div>
                         </div>
-                        <img class="image2" src="./image/slider.png" alt="">
-                        <div>
-                            <span class="span2">Passive Active</span>
-                        </div>
-                        <img class="image2" src="./image/slider.png" alt="">
+                        <div class="first">    
+                            <div>
+                                Passive 
+                            </div>
+                            <div class="intro">
+                                Active
+                            </div>
+                            <div>
+                                <img src="./image/slider.png" alt="">
+                            </div>
+                        </div> 
                     </div>
                 </div>
                 <div class="image4">
@@ -109,4 +151,4 @@
             </div>
         </header>
     </body>
-</html>
+</html> 
